k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pronunciation-master
  labels:
    app.kubernetes.io/name: pronunciation-master
    app.kubernetes.io/part-of: pronunciation-master
